# nvidia-mlops-platform

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  DEMO_GUIDE.md  Dockerfile  Dockerfile.api  EXPERIMENTS.md  LICENSE  Makefile  README.md  coverage.xml  docker-compose.api.yml  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: model_config.yaml  monitoring_config.yaml  prometheus.yml
data/golden_set/: golden_set.json
docs/: CHALLENGE_DESCRIPTION.md  LGPD_PLAN.md  LLM_BENCHMARK.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: __init__.py  ab_test_prompts.py  llm_judge.py  ragas_eval.py
notebooks/: EDA.ipynb  model_evaluation.ipynb  model_metrics_analysis.ipynb
nvidia-lstm-forecast/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  SECURITY.md  pyproject.toml
nvidia-lstm-forecast/scripts/: docker_helper.sh  run_api.sh  run_etl_nvidia.py  start_mlflow_ui.sh
nvidia-lstm-forecast/src/: __init__.py  config.py
nvidia-lstm-forecast/src/api/: __init__.py  dependencies.py  main.py  schemas.py
nvidia-lstm-forecast/src/api/routers/: data.py  health.py  predict.py
nvidia-lstm-forecast/src/dashboard/: app.py
nvidia-lstm-forecast/src/dashboard/components/: metrics.py  model_schema.py
nvidia-lstm-forecast/src/data/: __init__.py
nvidia-lstm-forecast/src/etl/: __init__.py
nvidia-lstm-forecast/src/training/: hyperparameter_search.py  train.py
nvidia-lstm-forecast/src/utils/: __init__.py
nvidia-lstm-forecast/tests/: __init__.py
nvidia-lstm-forecast/tests/test_api/: test_data.py  test_health.py  test_main.py  test_predict.py  test_schemas.py  test_train.py
nvidia-lstm-forecast/tests/test_etl/: __init__.py
nvidia-lstm-forecast/tests/test_models/: test_lstm_model.py
scripts/: formatter.sh  run_all.sh  run_dashboard.sh  run_hpo.sh  run_prediction.sh  run_training.sh
src/: config.py
src/agent/: __init__.py  rag_pipeline.py  react_agent.py  tools.py
src/api/: main.py  (+2 more)
tests/: conftest.py
(+87 files in other folders)
