[project]
name = "nvidia-lstm-forecast"
version = "0.1.0"
description = ""
authors = [
    {name = "LucasTechAI",email = "lucas.mendestech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (==1.0)",
    "pandas (==2.3.3)",
    "numpy (==2.4.0)",
    "black (==25.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
